--- a/app/src/main/res/values-v23/colors.xml
+++ b/app/src/main/res/values-v23/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2d132c</color>
-    <color name="colorPrimaryDark">#2d132c</color>
+    <color name="colorPrimaryDark">#FFFF</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorText">#3E3E3E</color>
 </resources>
