--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.studio.karya.inmuvi.ui.movie.MovieFragment">
+    tools:context="com.studio.karya.inmuvi.ui.movie.ContentFragment">
 
     <TextView
         android:id="@+id/title"
