--- a/app/src/main/res/layout/fragment_content.xml
+++ b/app/src/main/res/layout/fragment_content.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.studio.karya.inmuvi.ui.movie.ContentFragment">
+    tools:context="com.studio.karya.inmuvi.ui.content.ContentFragment">
 
     <TextView
         android:id="@+id/title"
@@ -22,7 +22,7 @@
         tools:text="Spiderman: Far From Home" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_movie"
+        android:id="@+id/rv_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
