--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#2d132c</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorText">#3E3E3E</color>
+
+    <color name="colorStartGradient">#5A3259</color>
+    <color name="colorEndGradient">#2d132c</color>
 </resources>
