--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -21,6 +21,7 @@
             app:title="Detail Content">
 
             <ImageView
+                android:id="@+id/backdrop_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/color_gradient"
